# scratchcon

./: .gitignore  README.md  README.rst  main.py  pyproject.toml  requirements.txt  setup.py  test.py
scratchcon/actions/: actions.py
scratchcon/utils/: auth.py  filterbot.py
wip/: README.md
wip/scratchcon/utils/: filterbot.py
