[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scratchcon"
version = "1.3.0"
description = "A project for Scratch con."
authors = [
    {name = "-G1ad05-", email = "on67703@gmail.com"},
    {name = "webbrowser11", email = "terpstragraham@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "requests",
    "scratchattach",
    "pyperclip",
    "colorama"
]
